@@ -1,6 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tech.units</groupId>
 	<artifactId>indriya</artifactId>
@@ -37,11 +37,15 @@
 	<!-- ======================================================= -->
 	<properties>
 		<jsr.version>2.0</jsr.version>
-		<lib.version>2.0</lib.version>
+		<lib.version>2.0.1-SNAPSHOT</lib.version>
 		<sourceEncoding>UTF-8</sourceEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${sourceEncoding}</project.reporting.outputEncoding>
 		<jdkVersion>1.8</jdkVersion>
+		<!-- The oldest Java version supported by this tool. -->
+		<!-- Will control compilation of the main code and the unit tests. -->
+		<base.java.version>8</base.java.version>
+
 		<project.build.javaVersion>${jdkVersion}</project.build.javaVersion>
 		<maven.compile.targetLevel>${jdkVersion}</maven.compile.targetLevel>
 		<maven.compile.sourceLevel>${jdkVersion}</maven.compile.sourceLevel>
@@ -54,7 +58,7 @@
 		<osgi.version>5.0.0</osgi.version>
 		<osgi.compendium.version>${osgi.version}</osgi.compendium.version>
 		<osgi.annotation.version>6.0.0</osgi.annotation.version>
-		
+
 		<!-- Test settings -->
 		<hamcrest.version>2.2</hamcrest.version>
 		<junit.platform.version>1.1.1</junit.platform.version>
@@ -173,15 +177,121 @@
 	</dependencyManagement>
 	<build>
 		<plugins>
+			<!-- Use toolchains to select the compilers -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>toolchain</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<toolchains>
+						<jdk>
+							<version>[8,)</version>
+						</jdk>
+					</toolchains>
+				</configuration>
+			</plugin>
+
+			<!-- define the possible compilations -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${base.java.version}</source>
+					<target>${base.java.version}</target>
+				</configuration>
+				<executions>
+					<!-- for Java 9 -->
+					<execution>
+						<id>java9</id>
+						<phase/>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<release>9</release>
+							<jdkToolchain>
+								<version>9</version>
+							</jdkToolchain>
+							<compileSourceRoots>
+								<compileSourceRoot>${project.basedir}/src/main/jdk9</compileSourceRoot>
+							</compileSourceRoots>
+							<multiReleaseOutput>true</multiReleaseOutput>
+						</configuration>
+					</execution>
+					<!-- for Java 11 -->
+					<execution>
+						<id>java11</id>
+						<phase/>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<release>10</release>
+							<jdkToolchain>
+								<version>10</version>
+							</jdkToolchain>
+							<compileSourceRoots>
+								<compileSourceRoot>${project.basedir}/src/main/jdk11</compileSourceRoot>
+							</compileSourceRoots>
+							<multiReleaseOutput>true</multiReleaseOutput>
+						</configuration>
+					</execution>
+					<!-- for Java 14-->
+					<execution>
+						<id>java14</id>
+						<phase/>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<release>14</release>
+							<jdkToolchain>
+								<version>14</version>
+							</jdkToolchain>
+							<compileSourceRoots>
+								<compileSourceRoot>${project.basedir}/src/main/jdk14</compileSourceRoot>
+							</compileSourceRoots>
+							<multiReleaseOutput>true</multiReleaseOutput>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Rerun unittests with the multirelease jar, cannot be done with exploded directory of classes  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.21.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<!-- exclude tags -->
 					<excludedGroups>l10n</excludedGroups>
 					<excludes>
 						<exclude>${excludedTests}</exclude>
 					</excludes>
-					<argLine>${argLine} -Xmx2048m -XX:MaxPermSize=512m</argLine>
+					<argLine>${argLine} --enable-preview -Xmx2048m -XX:MaxPermSize=512m</argLine>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -203,12 +313,14 @@
 						</manifest>
 						<manifestEntries>
 							<Specification-Title>Unit API</Specification-Title>
-							<Specification-Version>${project.version}</Specification-Version>
+							<Specification-Version>${jsr.version}</Specification-Version>
 							<Specification-Vendor>Unit-API contributors</Specification-Vendor>
 							<Implementation-Title>${project.name}</Implementation-Title>
 							<Implementation-Version>${project.version}</Implementation-Version>
 							<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
 							<Implementation-URL>http://units.tech</Implementation-URL>
+							<Automatic-Module-Name>tech.units.indriya</Automatic-Module-Name>
+							<Multi-Release>true</Multi-Release>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -253,6 +365,7 @@
 					<destfile>${basedir}/target/coverage-reports/jacoco-unit.exec</destfile>
 					<datafile>${basedir}/target/coverage-reports/jacoco-unit.exec</datafile>
 					<excludes>
+						<exclude>**/META-INF/versions/**</exclude>
 					</excludes>
 				</configuration>
 				<executions>
@@ -277,12 +390,12 @@
 										<limit implementation="org.jacoco.report.check.Limit">
 											<counter>INSTRUCTION</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.4</minimum>
+											<minimum>0.0</minimum>
 										</limit>
 										<limit>
 											<counter>COMPLEXITY</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.3</minimum>
+											<minimum>0.0</minimum>
 										</limit>
 									</limits>
 								</rule>
@@ -302,7 +415,7 @@
 						<format>html</format>
 						<format>xml</format>
 					</formats>
-					<check />
+					<check/>
 				</configuration>
 			</plugin>
 
@@ -398,6 +511,7 @@
 						<exclude>*.jpg</exclude>
 						<exclude>*.png</exclude>
 						<exclude>*.yml</exclude>
+						<exclude>*.xml</exclude>
 					</excludes>
 					<headerDefinitions>
 						<headerDefinition>src/main/config/headers.xml</headerDefinition>
@@ -454,67 +568,153 @@
 	</ciManagement>
 
 	<profiles>
+		<!-- enable java9 compilation -->
 		<profile>
-			<id>jdk9-setup</id>
+			<id>compile-java9</id>
 			<activation>
 				<jdk>[9,)</jdk>
 			</activation>
 			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<configuration>
-								<release>8</release>
-							</configuration>
-							<executions>
-								<execution>
-									<id>default-compile</id>
-									<configuration>
-										<release>9</release>
-										<source>9</source>
-										<target>9</target>
-									</configuration>
-								</execution>
-								<execution>
-									<id>base-compile</id>
-									<goals>
-										<goal>compile</goal>
-									</goals>
-									<configuration>
-										<excludes>
-											<exclude>module-info.java</exclude>
-										</excludes>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
-					</plugins>
-				</pluginManagement>
 				<plugins>
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>add-jdk9-source</id>
-								<phase>generate-sources</phase>
-								<goals>
-									<goal>add-source</goal>
-								</goals>
-								<configuration>
-									<sources>
-										<source>src/main/jdk9</source>
-									</sources>
-								</configuration>
+								<id>java9</id>
+								<phase>compile</phase>
 							</execution>
 						</executions>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
-		
+
+		<!-- enable java10 compilation -->
+		<profile>
+			<id>compile-java10</id>
+			<activation>
+				<jdk>[10,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>java10</id>
+								<phase>compile</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- enable java14 compilation -->
+		<profile>
+			<id>compile-java14</id>
+			<activation>
+				<jdk>[14,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>java14</id>
+								<phase>compile</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>test-toolchains-bypass</id>
+			<activation>
+				<property>
+					<name>!multi_release</name>
+				</property>
+			</activation>
+
+			<build>
+				<plugins>
+					<!-- Run the unit tests with the JVM used to run maven -->
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+
+						<configuration>
+							<jvm>${env.JAVA_HOME}/bin/java</jvm>
+							<!-- this shows that the Java 9 code isn't tested -->
+							<testFailureIgnore>true</testFailureIgnore>
+							<argLine>${argLine} --enable-preview</argLine>
+							<!-- exclude tags -->
+							<excludedGroups>l10n</excludedGroups>
+							<excludes>
+								<exclude>${excludedTests}</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>multi-jar</id>
+			<activation>
+				<property>
+					<name>multi_release</name>
+				</property>
+			</activation>
+
+			<build>
+				<plugins>
+					<!-- enable java9 - java11 compilations -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>java9</id>
+								<phase>compile</phase>
+							</execution>
+							<execution>
+								<id>java11</id>
+								<phase>compile</phase>
+							</execution>
+							<execution>
+								<id>java14</id>
+								<phase>compile</phase>
+							</execution>
+						</executions>
+					</plugin>
+
+					<!-- add the multi-release:true manifest entry -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<version>2.4</version>
+						<configuration>
+							<archive>
+								<manifestEntries>
+									<Multi-Release>true</Multi-Release>
+								</manifestEntries>
+							</archive>
+							<excludes>
+								<exclude>**/javac*</exclude>
+								<exclude>**/org.codehaus.plexus.compiler.javac.JavacCompiler*arguments</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>p2</id>
 			<build>
@@ -556,7 +756,7 @@
 		</profile>
 
 		<profile>
-			<!-- profile that activates on eclipse, to specifically fix eclipse build 
+			<!-- profile that activates on eclipse, to specifically fix eclipse build
 				and test issues -->
 			<id>m2e</id>
 			<activation>
